--- a/src/LinqAdvancedLab.Console/LinqAdvancedLab.Console.csproj
+++ b/src/LinqAdvancedLab.Console/LinqAdvancedLab.Console.csproj
@@ -7,4 +7,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="../LinqAdvancedLab.Domain/LinqAdvancedLab.Domain.csproj" />
+    <ProjectReference Include="../LinqAdvancedLab.Data/LinqAdvancedLab.Data.csproj" />
+  </ItemGroup>
+
 </Project>
