--- a/src/LinqAdvancedLab.Data/LinqAdvancedLab.Data.csproj
+++ b/src/LinqAdvancedLab.Data/LinqAdvancedLab.Data.csproj
@@ -5,8 +5,15 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
-<ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="../LinqAdvancedLab.Domain/LinqAdvancedLab.Domain.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.0" />
   </ItemGroup>
+
 </Project>
 
