--- a/tests/LinqAdvancedLab.Tests/LinqAdvancedLab.Tests.csproj
+++ b/tests/LinqAdvancedLab.Tests/LinqAdvancedLab.Tests.csproj
@@ -8,10 +8,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="../../src/LinqAdvancedLab.Domain/LinqAdvancedLab.Domain.csproj" />
+    <ProjectReference Include="../../src/LinqAdvancedLab.Data/LinqAdvancedLab.Data.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="coverlet.collector" Version="6.0.4" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.14.1" />
     <PackageReference Include="xunit" Version="2.9.3" />
     <PackageReference Include="xunit.runner.visualstudio" Version="3.1.4" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="8.0.0" />
   </ItemGroup>
 
   <ItemGroup>
